3.6
 - Integrated Query Builder into Data Browser.

3.5.9
 - minor GUI improvements.

3.5.8
 - bug fix for [ jailer-Bugs-3294893 ] Outer Join for selecting dependant entries and Oracle 10
  mixing left joins and theta-style joins caused problems on oracle DBMS      	

3.5.7
 - Further Data Browser GUI improvements.

3.5.6
 - Data Browser GUI improvements.

3.5.5
 - Minor bug fix.

3.5.4
 - Minor bug fixes and improvements.

3.5.3
 - Data Browser has been improved.

3.5.2
 - minor GUI enhancements.

3.5.1
 - Bug fix: changing the subject table was not possible in version 3.5.

3.5
 - A Data Browser has been introduced.
 - GUI enhancements.

3.4.10
 - Enhanced readability of generated SQL scripts.
 - Fix for rendering bug in closure view.

3.4.9
 - SQL generator no longer uses the "from DUAL" idiom 
   for single-row inserts on Oracle DBMS

3.4.8
 - Bugfix: connections were not always closed properly.

3.4.7
 - Fixed a bug concerning import of LOB data [3033441].

3.4.6
 - Added associations list view in closure-browser.

3.4.5
 - Added dependency cycle analysis feature. 
 - Added support for data type 'YEAR' on MySQL.
 - minor bug fixes.

3.4.4
 - Command line rendering in "Data Export" dialog eases the handling of the command line interface.
 - Added support for HSQL DBMS.
 - Improved error handling.
 - JDBC driver's jar files can now be specified via command line arguments.
 - new XML-attributes "j:if-not-null" and "j:if-null" can now be used in XML templates for case differentiation.
 
3.4.3
 - Added support for SQLite DBMS.
 - Added support for user-defined distinct types.

3.4.2
 - Fixed a bug concerning numeric columns with unlimited precision in postgreSQL.
 - Amended configuration for Firebird DBMS.

3.4.1
 - Improvements of graphical progress indicator.
 - Support for MySQL string literal escape sequences.
 - Fixed a bug concerning the command line option "working-folder".

3.4
 - Added graphical progress indicator.